--- a/fly.toml
+++ b/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "extreme-startup-player-small-brook-5930"
+app = "extreme-startup-player"
 primary_region = "lhr"
 
 [build]
