--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,15 @@ repositories {
 
 apply plugin: "kotlin"
 
-compileKotlin.kotlinOptions.jvmTarget = "11"
-compileTestKotlin.kotlinOptions.jvmTarget = "11"
+compileKotlin.kotlinOptions.jvmTarget = "21"
+compileTestKotlin.kotlinOptions.jvmTarget = "21"
 compileTestKotlin.kotlinOptions.freeCompilerArgs += "-Xjvm-default=all"
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(21))
+    }
+}
 
 test {
     useJUnitPlatform()
